[gd_scene load_steps=2 format=3 uid="uid://p6ttfnjpvb04"]

[ext_resource type="Script" uid="uid://d18yf3l74cpcw" path="res://hud.gd" id="1_37p78"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="ClockPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TimeLabel" type="Label" parent="ClockPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 24
text = "00:00"
horizontal_alignment = 1

[node name="DayLabel" type="Label" parent="ClockPanel"]
layout_mode = 0
offset_top = 32.0
offset_right = 69.0
offset_bottom = 55.0
text = "Spring 1"
